--- a/CoreAdmChamepe/CoreAdmChamepe.csproj
+++ b/CoreAdmChamepe/CoreAdmChamepe.csproj
@@ -200,9 +200,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Imagens\setorial 01.jpg" />
-    <Content Include="Imagens\setorial 02.jpg" />
-    <Content Include="Imagens\setorial 03.jpg" />
+    <Content Include="Imagens\setorial 01.jpeg" />
+    <Content Include="Imagens\setorial 02.jpeg" />
+    <Content Include="Imagens\setorial 03.jpeg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Compile Include="Models\Context\DbAdmChamepe.Context.cs" />
